--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <title>Pleet || Free Online Appointment Manager</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need t.</noscript>
     <div id="root"></div>
   </body>
 </html>
