--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Pleet || Free Online Appointment Manager</title>
+    <title>pleet || Free Online Appointment Manager</title>
   </head>
   <body>
     <noscript>You need t.</noscript>
